--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <title>Bootstrap with mockaroo</title>
 </head>
 <body>
@@ -55,23 +56,38 @@
     <div class="container">
         <div class="p-3"></div>
         <div class="row">
-            <div class="col-*-*">
+            <div class="col">
                 <p class="h2 text-center">Mockaroo test</p>
             </div>
         </div>
         <div class="row justify-content-center">
             <div class="col-auto">
-                <label for="inputPassword6" class="col-form-label">Mockaroo access key</label>
+                <input id="mockaroo-form" class="form-control" type="text" placeholder="Mockaroo access key">
             </div>
             <div class="col-auto">
-                <input type="text" id="mockaroo-access-key" class="form-control" aria-describedby="passwordHelpInline">
+                <button onclick="createChart1(), createChart2()" type="submit" class="btn btn-primary">Submit</button>
             </div>
         </div>
         <div class="row">
-            <span id="passwordHelpInline" class="text-center form-text">
+            <span id="mockaroo-access-key" class="text-center form-text">
                 Provide your mockaroo access key.
             </span>
         </div>
     </div>
+    <div class="container">
+        <div class="p-3"></div>
+        <div class="row">
+            <div class="col">
+                <canvas id="chart1"></canvas>
+            </div>
+            <div class="col">
+                <canvas id="chart2"></canvas>
+            </div>
+        </div>
+    </div>
 </body>
+
+<script src="src/queryCreator.js"></script>
+<script src="src/chart1.js"></script>
+<script src="src/chart2.js"></script>
 </html>
