make charts work for the same data

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 <input id="mockaroo-form" class="form-control" type="text" placeholder="Mockaroo access key">
             </div>
             <div class="col-auto">
-                <button onclick="createChart1(), createChart2()" type="submit" class="btn btn-primary">Submit</button>
+                <button onclick="updateCharts()" type="submit" class="btn btn-primary">Submit</button>
             </div>
         </div>
         <div class="row">
@@ -90,4 +90,5 @@
 <script src="src/queryCreator.js"></script>
 <script src="src/chart1.js"></script>
 <script src="src/chart2.js"></script>
+<script src="src/queryExecutor.js"></script>
 </html>
