--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <title>Bootstrap with mockaroo</title>
 </head>
@@ -72,6 +73,39 @@
             <span id="mockaroo-access-key" class="text-center form-text">
                 Provide your mockaroo access key.
             </span>
+        </div>
+    </div>
+    <div class="container">
+        <div class="row">
+            <div class="p-1"></div>
+            <div class="col text-center">
+                <button class="btn btn-info" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+                    Check how to do this
+                </button>
+            </div>
+        </div>
+        <div class="collapse" id="collapseExample">
+            <div class="p-1"></div>
+            <div class="row align-items-end">
+                <div class="col">
+                    <div class="text-center">
+                        <img src="images/tutorial/schema.png" class="img-fluid">
+                    </div>
+                    <p class="fs-6 text-center">Create schema with the same values</p>
+                </div>
+                <div class="col">
+                    <div class="text-center">
+                        <img src="images/tutorial/api.png" class="img-fluid">
+                    </div>
+                    <p class="fs-6 text-center">Create GET request API</p>
+                </div>
+                <div class="col">
+                    <div class="text-center">
+                        <img src="images/tutorial/api_key.png" class="img-fluid">
+                    </div>
+                    <p class="fs-6 text-center">Find your mockaroo access key</p>
+                </div>
+            </div>
         </div>
     </div>
     <div class="container">
